fix alignment of logo

--- a/price_scrapper_front/src/components/Header/Header.css
+++ b/price_scrapper_front/src/components/Header/Header.css
@@ -43,3 +43,7 @@
     width: 100px;
     height: 48px;
   }
+
+  #logo {
+    padding-left: 50%;
+  }
